# game_techprog

game_techprog/: CMakeLists.txt  architecture.txt  main.cpp  main.h
game_techprog/GoogleTestDemo/: CMakeLists.txt  main_test.cpp
game_techprog/buildings/: CMakeLists.txt  building.cpp  building.h
game_techprog/exceptions/: CMakeLists.txt  exceptions.cpp  exceptions.h
game_techprog/functions/: CMakeLists.txt  functions.cpp  functions.h
game_techprog/libs/lib_buildings/: Makefile  cmake_install.cmake
game_techprog/libs/lib_exceptions/: Makefile  cmake_install.cmake
game_techprog/libs/lib_functions/: Makefile  cmake_install.cmake
game_techprog/libs/lib_map/: Makefile  cmake_install.cmake
game_techprog/libs/lib_unit/: Makefile  cmake_install.cmake
game_techprog/map/: CMakeLists.txt  destination.h  map.cpp  map.h
game_techprog/unit/: CMakeLists.txt  unit.cpp  unit.h
